--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,3 @@
+spring.cloud.config.server.git.uri=https://github.com/contauto/currency-exchanger-micro.git
+spring.cloud.config.server.git.default-label=master
 server.port=8888
