--- a/limit-service/src/main/resources/application.properties
+++ b/limit-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=limit-service
 spring.config.import=optional:configserver:http://localhost:8888
 limit-service.minimum=9
 limit-service.maximum=900
