--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=config-server
-spring.cloud.config.server.git.uri=https://github.com/contauto/currency-exchanger-micro.git
+spring.cloud.config.server.git.uri=file:///C:/Users/berke/IdeaProjects/currency-exchanger-micro
 spring.cloud.config.server.git.default-label=master
 server.port=8888
